# image_proc

./: CMakeLists.txt  README.md  apply_filters.cpp  apply_filters.h  blur.cpp  blur.h  bmp.cpp  bmp.h  cmd_line_args_parser.cpp  cmd_line_args_parser.h  color.cpp  color.h  crop.h  edge.cpp  filter.cpp  filter.h  filter_factory.cpp  filter_factory.h  image.cpp  image.h  image_processor.cpp  kaleidoscope.h  sepia.cpp  sepia.h  sharp.cpp
filters/: blur.cpp  blur.h  crop.cpp  edge.h  gs.cpp  gs.h  kaleidoscope.cpp  neg.cpp  neg.h  sharp.cpp  sharp.h
